# Tim_Reska

./: .gitignore  CITATION.cff  CNAME  HUB.md  LICENSE  README.md  STRUCTURE.md  index.html  robots.txt  sitemap.xml
MedRisk-ADH/: .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
MedRisk-ADH/.streamlit/: config.toml
MedRisk-ADH/app/: app.py  data_cache.py
MedRisk-ADH/app/components/: dqs_gauge.py  metrics_cards.py  progression_chart.py  shap_chart.py
MedRisk-ADH/app/pages/: 1_Patient_Assessment.py  2_PBW_Comparison.py  3_Portfolio_Dashboard.py  4_Alzheimer_Progression.py
MedRisk-ADH/app/static/: executive.html  index.html
MedRisk-ADH/data/audit/: pipeline_audit.jsonl
MedRisk-ADH/data/reports/: medrisk_adh_deck.pptx  pitch.html  pitch.pptx
MedRisk-ADH/docs/: allianz_briefing.md  ceo_talking_points.md  data_requirements.md  guide_medrisk_adh.md  what_we_built.md
MedRisk-ADH/notebooks/: 01_synthetic_cohort.ipynb  02_risk_classification.ipynb  03_disease_progression.ipynb  04_failure_modes.ipynb  05_underwriting_report.ipynb
MedRisk-ADH/scripts/: generate_all.py  generate_docs.py  generate_slides.py
MedRisk-ADH/slides/: pitch.md  theme.css
MedRisk-ADH/src/medrisk/data/: __init__.py  icd10.py  schemas.py  synthetic.py
MedRisk-ADH/src/medrisk/evaluation/: __init__.py  metrics.py
MedRisk-ADH/src/medrisk/explain/: __init__.py
MedRisk-ADH/src/medrisk/features/: engineering.py
MedRisk-ADH/src/medrisk/governance/: audit_log.py
MedRisk-ADH/src/medrisk/models/: __init__.py  disease_configs.py  multistate.py
MedRisk-ADH/src/medrisk/validation/: confidence.py  data_quality.py  failure_detection.py  range_checks.py  reliability_head.py  shift_detection.py
MedRisk-ADH/tests/: test_alzheimer_synthetic.py  test_audit_log.py  test_data_profile.py  test_dqs_v2.py  test_failure_detection.py  test_multistate.py  test_pdf_report.py  test_range_checks.py  test_reliability_head.py  test_shift_detection.py  test_xgb_classifier.py
academy/: README.md  index.html  prompting-patterns.html  verification-checklist.html  what-are-llms.html
agent-skill-pack/: README.md  index.html  styles.css
agentic_systems/: AGENTIC_FRONTIER_PRIMER.html  AGENTIC_FRONTIER_PRIMER.md
ai-deployment-readiness/: README.md  index.html  pyproject.toml
ai-deployment-readiness/src/: __init__.py  __main__.py  benchmarks.py  questionnaire.py  report.py  scorer.py
ai-deployment-readiness/tests/: test_questionnaire.py  test_scorer.py
ai-news-radar/: index.html  styles.css
disease-network/: README.md  diseases.json  index.html
disease-progression/: LICENSE  Makefile  README.md  conftest.py  index.html  pyproject.toml
disease-progression/.github/workflows/: ci.yml
disease-progression/configs/: default.yaml
disease-progression/docs/: dach_regulatory.md  underwriting_context.md
disease-progression/governance/: data_sheet.md  model_card_cvd.md  model_card_diabetes.md  risk_register.md
disease-progression/notebooks/: 00_data_quality.ipynb  01_cvd_progression.ipynb  02_diabetes_progression.ipynb  03_business_view.ipynb
disease-progression/src/disease_progression/: __init__.py
disease-progression/src/disease_progression/data/: __init__.py  omop_etl.py  synthea_loader.py
disease-progression/src/disease_progression/data/codelists/: cvd.yaml  diabetes.yaml
disease-progression/src/disease_progression/evaluation/: __init__.py  fairness.py  metrics.py  model_card.py
disease-progression/src/disease_progression/features/: __init__.py  static.py  temporal.py  tokenizer.py
disease-progression/src/disease_progression/models/: __init__.py  cox_deepsurv.py  deephit.py  multistate.py  registry.py  survtrace.py
disease-progression/src/disease_progression/utils/: __init__.py  viz.py
disease-progression/tests/: test_codelists.py  test_feature_leakage.py  test_labels.py  test_metrics.py
docs/: HUB.html  INDEX.html  INDEX.md  index_nodes.yaml
ebola/: README.md  index.html
hanta/: README.md  index.html
llm-cost-calculator/: README.md  index.html  pyproject.toml
llm-cost-calculator/configs/: pricing_2026.yml
llm-cost-calculator/src/: __init__.py  calculator.py  pricing.py  report.py  roi.py  sensitivity.py
llm-cost-calculator/tests/: test_calculator.py  test_roi.py  test_sensitivity.py
llm-eval/: README.md  conftest.py  flowchart.html  requirements.txt  (+1 more)
medrisk-adh/: .gitignore  Makefile  README.md  ROADMAP.md  healthcare-consulting.skill  mbb-slides.skill  pyproject.toml
medrisk-adh/app/: app.py
medrisk-adh/app/components/: shap_chart.py
medrisk-adh/app/pages/: 2_PBW_Comparison.py  3_Portfolio_Dashboard.py  5_KTG_Kalkulation.py  6_Underwriting_Simulator.py  7_KTG_Flashcards.py
medrisk-adh/app/static/: executive.html  index.html
medrisk-adh/configs/: default.yaml  filters.yml  sources.yml
medrisk-adh/data/reports/: interview_matthias_deck.pptx  medrisk_adh_deck.pptx
medrisk-adh/docs/: failure_modes.md  study_guide.md  study_guide_de.aux  study_guide_de.out  study_guide_de.toc
medrisk-adh/notebooks/: 01_synthetic_cohort.ipynb
medrisk-adh/scripts/: generate_deck.py  generate_ml_deck.py  generate_slides.py  generate_underwriting_fundamentals.py
medrisk-adh/src/medrisk/evaluation/: plots.py  subgroup_eval.py
medrisk-adh/src/medrisk/features/: data_profile.py  encoding.py
medrisk-adh/src/medrisk/fetch/: __init__.py  _harmonizer.py  _registry.py  _validators.py
medrisk-adh/src/medrisk/fetch/adapters/: cdc_places.py
medrisk-adh/src/medrisk/governance/: __init__.py
medrisk-adh/src/medrisk/models/: __init__.py  _config.py  disease_configs.py
medrisk-adh/src/medrisk/underwriting/: __init__.py  clinical_checks.py  profiles.py
medrisk-adh/tests/: conftest_fetch.py  test_audit_log.py  test_clinical_checks.py  test_cox_ph.py  test_data_quality.py  test_decision_engine.py  test_dqs_v2.py  test_fetch_cdc_places.py  test_fetch_harmonizer.py  test_fetch_helpers.py  test_fetch_pipeline.py  test_fetch_schema.py  test_fetch_t1_granada.py  test_fetch_uk_biobank.py  test_fetch_writers.py  test_krankentagegeld.py  test_underwriting_profiles.py
(+356 files in other folders)
