[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medrisk"
version = "0.1.0"
description = "AI-driven medical underwriting with confidence-calibrated failure mode detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tim Reska" },
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lifelines>=0.29",
    "shap>=0.44",
    "pydantic>=2.5",
    "fpdf2>=2.8",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medrisk"]

[tool.ruff]
src = ["src", "tests"]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
