[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disease-progression"
version = "0.1.0"
description = "Disease progression modeling for medical underwriting — survival analysis, multistate models, and transformer architectures on longitudinal EHR/claims data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "the author" },
]
keywords = [
    "survival-analysis",
    "disease-progression",
    "deep-learning",
    "medical-underwriting",
    "ehr",
    "transformer",
    "competing-risks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "lifelines>=0.27",
    "pycox>=0.2",
    "torch>=2.0",
    "scikit-survival>=0.22",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "hmmlearn>=0.3",
    "fhir.resources>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "mypy>=1.0",
]

[project.scripts]
disease-progression = "disease_progression.cli:main"

[project.urls]
Repository = "https://github.com/treska/disease-progression"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["disease_progression"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/disease_progression"]
